Fixed headings overflowing the masthead

--- a/src/scss/04-elements/_headings.scss
+++ b/src/scss/04-elements/_headings.scss
@@ -20,6 +20,7 @@
   color: $uhb-color-primary; // [1]
   color: var(--color-primary); // [2]
   margin-bottom: uhb-spacing(3);
+  overflow-wrap: break-word;
 
   @include uhb-media-query($from: 'md') {
     margin-bottom: uhb-spacing(4);
